# myits-broadcast-backend/docs/swagger.json
@@ -211,8 +211,15 @@
                 "expiry_date": {
                     "type": "string"
                 },
+                "expiry_days": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "image_url": {
+                    "description": "\u003c--- Field Baru",
+                    "type": "string"
                 },
                 "status": {
                     "type": "string"
